feat: added user entity
