# internal/entity/user.go
@@ -1,0 +1,7 @@
+package entity
+
+type User struct {
+	Id        int    `json:"id"`
+	FirstName string `json:"firstName"`
+	LastName  string `json:"lastName"`
+}
