# internal/handler/request.go
@@ -1,0 +1,6 @@
+package handler
+
+type UserRequest struct {
+	FirstName string `json:"firstName,omitempty"`
+	LastName  string `json:"lastName,omitempty"`
+}
